# cocotb_kernel

./: .gitignore  LICENSE  README.md  pyproject.toml
binder/: environment.yml  postBuild
cocotb_kernel/: __init__.py  __main__.py  install.py  module.py
example/: Quickstart Guide.ipynb  cocotb.toml  dff.sv
src/cocotb_kernel/: __init__.py  __main__.py  install.py  module.py
